<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.success.coaqua.activities.SignUpActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_image_des"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/under_logo_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/under_logo_text"
            android:textSize="@dimen/normal_text_size" />

        <RelativeLayout
            android:id="@+id/layoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/under_logo_text"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hintFirstName"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@id/etFirstName"
                android:layout_marginTop="10dp"
                android:hint="@string/hintLastName"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@id/etLastName"
                android:layout_marginTop="20dp"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@id/etEmail"
                android:layout_marginTop="20dp"
                android:hint="@string/hintAddress"
                android:inputType="textCapWords"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@id/etAddress"
                android:layout_marginTop="20dp"
                android:hint="@string/hintPhone"
                android:inputType="phone"
                android:paddingLeft="5dp" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imgSignUpClear"
                style="@style/CustomImageButtonStyle"
                android:layout_alignParentLeft="true"
                android:background="#fff"
                android:src="@drawable/clear" />

            <ImageButton
                android:id="@+id/imgSignUpChecked"
                style="@style/CustomImageButtonStyle"
                android:layout_alignParentRight="true"
                android:background="#fff"
                android:src="@drawable/checked" />
        </RelativeLayout>

        <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true" />
    </LinearLayout>

</ScrollView>