<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.success.coaqua.activities.OrderActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_image_des"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/under_logo_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/under_logo_text_order"
        android:textSize="@dimen/normal_text_size" />

    <ImageButton
        android:id="@+id/imgOrderBox"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@id/under_logo_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="increaseCount"
        android:src="@drawable/box" />

    <TextView
        android:id="@+id/under_box_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgOrderBox"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/under_box_text"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:id="@+id/layoutOrder"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/under_box_text"
        android:layout_marginTop="10dp"
        android:background="@color/text_color"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/text_color"
            android:gravity="center|right"
            android:text="@string/preOrderText"
            android:textColor="@color/main_bg_color" />

        <EditText
            android:id="@+id/etTotalBox"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:text="1"
            android:textColor="@color/main_bg_color"
            android:textSize="40dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/text_color"
            android:gravity="center|left"
            android:text="@string/subOrderText"
            android:textColor="@color/main_bg_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutOrder"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tvTotal" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTotal"
        android:gravity="center"
        android:text="$89.99" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTotalPrice"
        android:layout_marginBottom="10dp" >

        <ImageButton
            android:id="@+id/imgOrderClear"
            style="@style/CustomImageButtonStyle"
            android:layout_alignParentLeft="true"
            android:src="@drawable/clear" />

        <ImageButton
            android:id="@+id/imgOrderChecked"
            style="@style/CustomImageButtonStyle"
            android:layout_alignParentRight="true"
            android:src="@drawable/checked" />
    </RelativeLayout>

    </LinearLayout>

</ScrollView>